--- a/116.html
+++ b/116.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html class="no-js" lang="tr">
   <head>
-    <title>Kışlık Kadın Bot - AZM Dış Ticaret</title>
+    <title>Ürün 116 - AZM Dış Ticaret</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    
+
     <meta name="author" content="Azm Dış Ticaret" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="description" content="Azm Dış Ticaret" />
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="demos/decor-store/decor-store.css" />
     <link rel="stylesheet" href="css/custom.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
   </head>
   <body data-mobile-nav-style="classic">
     <header class="header-with-topbar">
@@ -166,7 +166,7 @@
     </header>
 
     <section class="pages__title">
-      <h1 class="pages__title--fs">Kışlık Kadın Ayakkabı</h1>
+      <h1 class="pages__title--fs">Ürün 116</h1>
     </section>
 
     <section class="pb-0">
@@ -181,53 +181,17 @@
                   data-swiper-thumb-click="1">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide gallery-box">
-                      <a href="images/ürünler/kd-ks/kd-ks-1-.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
-                        <img class="w-100" src="images/ürünler/kd-ks/kd-ks-1.jpg" alt="" />
+                      <a href="images/ürünler/ayakkabi/116/116-1000x667/116-1.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
+                        <img class="w-100" src="images/ürünler/ayakkabi/116/116-600x400/116-1.jpg" alt="" />
                       </a>
                     </div>
 
                     <div class="swiper-slide gallery-box">
-                      <a href="images/ürünler/kd-ks/kd-ks-2-.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
-                        <img class="w-100" src="images/ürünler/kd-ks/kd-ks-2.jpg" alt="" />
+                      <a href="images/ürünler/ayakkabi/116/116-1000x667/116-2.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
+                        <img class="w-100" src="images/ürünler/ayakkabi/116/116-600x400/116-2.jpg" alt="" />
                       </a>
                     </div>
-
-                    <div class="swiper-slide gallery-box">
-                      <a href="images/ürünler/kd-ks/kd-ks-3-.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
-                        <img class="w-100" src="images/ürünler/kd-ks/kd-ks-3.jpg" alt="" />
-                      </a>
-                    </div>
-
-                    <div class="swiper-slide gallery-box">
-                      <a href="images/ürünler/kd-ks/kd-ks-4-.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
-                        <img class="w-100" src="images/ürünler/kd-ks/kd-ks-4.jpg" alt="" />
-                      </a>
-                    </div>
-
-                    <div class="swiper-slide gallery-box">
-                      <a href="images/ürünler/kd-ks/kd-ks-5-.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
-                        <img class="w-100" src="images/ürünler/kd-ks/kd-ks-5.jpg" alt="" />
-                      </a>
-                    </div>
-
-                    <div class="swiper-slide gallery-box">
-                      <a href="images/ürünler/kd-ks/kd-ks-6-.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
-                        <img class="w-100" src="images/ürünler/kd-ks/kd-ks-6.jpg" alt="" />
-                      </a>
-                    </div>
-
-                    <div class="swiper-slide gallery-box">
-                      <a href="images/ürünler/kd-ks/kd-ks-7-.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
-                        <img class="w-100" src="images/ürünler/kd-ks/kd-ks-7.jpg" alt="" />
-                      </a>
-                    </div>
-
-                    <div class="swiper-slide gallery-box">
-                      <a href="images/ürünler/kd-ks/kd-ks-8-.jpg" data-group="lightbox-gallery" title="Minimalist wooden chair">
-                        <img class="w-100" src="images/ürünler/kd-ks/kd-ks-8.jpg" alt="" />
-                      </a>
-                    </div>
-
+                    
                   </div>
                 </div>
                 <div class="slider-product-next swiper-button-next border-radius-100 border border-1 border-color-extra-medium-gray"><i class="fa fa-chevron-right text-dark-gray icon-very-small"></i></div>
@@ -236,14 +200,8 @@
               <div class="col-12 position-relative">
                 <div class="swiper-container product-image-thumb">
                   <div class="swiper-wrapper pt-5">
-                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/kd-ks/kd-ks-1.jpg" alt="" /></div>
-                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/kd-ks/kd-ks-2.jpg" alt="" /></div>
-                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/kd-ks/kd-ks-3.jpg" alt="" /></div>
-                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/kd-ks/kd-ks-4.jpg" alt="" /></div>
-                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/kd-ks/kd-ks-5.jpg" alt="" /></div>
-                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/kd-ks/kd-ks-6.jpg" alt="" /></div>
-                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/kd-ks/kd-ks-7.jpg" alt="" /></div>
-                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/kd-ks/kd-ks-8.jpg" alt="" /></div>
+                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/ayakkabi/116/116-600x400/116-1.jpg" alt="" /></div>
+                    <div class="swiper-slide"><img class="w-100" src="images/ürünler/ayakkabi/116/116-600x400/116-2.jpg" alt="" /></div>
                   </div>
                 </div>
               </div>
@@ -251,7 +209,7 @@
           </div>
           <div class="col-lg-5 offset-lg-1 product-info" data-anime='{ "translate": [0, 0], "opacity": [0,1], "duration": 600, "delay": 100, "staggervalue": 150, "easing": "easeOutQuad" }'>
             <span class="fw-500 text-dark-gray d-block">Ayakkabı</span>
-            <h5 class="alt-font text-dark-gray fw-700 mb-10px">Kışlık Kadın Ayakkabı</h5>
+            <h5 class="alt-font text-dark-gray fw-700 mb-10px">Ürün 116</h5>
             <!--<p>Lorem ipsum is simply dummy text of the printing and typesetting industry lorem ipsum standard.</p>
             <p>Lorem ipsum is simply dummy text of the printing and typesetting industry lorem ipsum standard.</p>
             <p>Lorem ipsum is simply dummy text of the printing and typesetting industry lorem ipsum standard.</p>
@@ -360,7 +318,7 @@
     </section>
     -->
 
-    <section >
+    <section>
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mb-25px sm-mb-10px" data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
