--- a/products-shoe.html
+++ b/products-shoe.html
@@ -193,7 +193,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="102.html">
-                      <img src="images/ürünler/lokum.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -207,7 +207,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="103.html">
-                      <img src="images/ürünler/makarna.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -221,7 +221,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="104.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -235,7 +235,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="105.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -249,7 +249,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="106.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -263,7 +263,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="107.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -277,7 +277,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="108.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -291,7 +291,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="109.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -305,7 +305,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="110.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -319,7 +319,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="111.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -333,7 +333,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="112.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -347,7 +347,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="113.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -361,7 +361,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="114.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -375,7 +375,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="115.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -389,7 +389,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="116.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -403,7 +403,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="117.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -417,7 +417,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="118.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -431,7 +431,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="119.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -445,7 +445,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="120.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -459,7 +459,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="121.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -473,7 +473,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="122.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -487,7 +487,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="123.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -501,7 +501,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="124.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -515,7 +515,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="125.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -529,7 +529,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="126.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -543,7 +543,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="127.html">
-                      <img src="images/ürünler/canta.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
@@ -557,7 +557,7 @@
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
                     <a href="128.html">
-                      <img src="images/ürünler/sandalet.jpg" alt="" />
+                      <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
