--- a/shop.html
+++ b/shop.html
@@ -178,13 +178,13 @@
               <li class="grid-item">
                 <div class="shop-box mb-10px">
                   <div class="shop-image mb-20px">
-                    <a href="winter-womens-boots.html">
+                    <a href="products-shoe.html">
                       <img src="images/ürünler/ayakkabi.jpg" alt="" />
                       <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
                     </a>
                   </div>
                   <div class="shop-footer text-center">
-                    <a href="winter-womens-boots.html" class="alt-font text-dark-gray fs-19 fw-500">Ayakkabı</a>
+                    <a href="products-shoe.html" class="alt-font text-dark-gray fs-19 fw-500">Ayakkabı</a>
                   </div>
                 </div>
               </li>
@@ -230,20 +230,7 @@
                   </div>
                 </div>
               </li>
-
-              <li class="grid-item">
-                <div class="shop-box mb-10px">
-                  <div class="shop-image mb-20px">
-                    <a href="summer-women-shoes.html">
-                      <img src="images/ürünler/sandalet.jpg" alt="" />
-                      <div class="shop-overlay bg-gradient-gray-light-dark-transparent"></div>
-                    </a>
-                  </div>
-                  <div class="shop-footer text-center">
-                    <a href="summer-women-shoes.html" class="alt-font text-dark-gray fs-19 fw-500">Sandalet</a>
-                  </div>
-                </div>
-              </li>
+              
             </ul>
           </div>
           <div class="col-xxl-2 col-lg-3 shop-sidebar" data-anime='{ "el": "childs", "translateY": [-15, 0], "opacity": [0,1], "duration": 300, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
