--- a/products-shoe.html
+++ b/products-shoe.html
@@ -171,7 +171,7 @@
     <section class="ps-6 pe-6 lg-ps-2 lg-pe-2 sm-ps-0 sm-pe-0">
       <div class="container-fluid">
         <div class="row flex-row-reverse">
-          <div class="col-xxl-10 col-lg-9 ps-5 md-ps-15px md-mb-60px">
+          <div class="col-xxl-10 col-lg-9 md-ps-15px md-mb-60px">
             <ul class="shop-modern shop-wrapper grid-loading grid grid-4col xl-grid-3col sm-grid-2col xs-grid-1col gutter-extra-large text-center" data-anime='{ "el": "childs", "translateY": [-15, 0], "opacity": [0,1], "duration": 300, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
               <li class="grid-sizer"></li>
 
